# OpenGLDemo

app/: build.gradle.kts
app/src/androidTest/java/com/bruno13palhano/opengldemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/test/java/com/bruno13palhano/opengldemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
